task5/otus/templates/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-app
  template:
    metadata:
      labels:
        app: otus-app
    spec:
      containers:
      - name: otus
        image: makhnevvitalik/otus-task5:1.0.2
        ports:
        - containerPort: 8000
          name: app-port
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            port: app-port
            path: /actuator/health
          initialDelaySeconds: 1
          periodSeconds: 3
